# frp-stopwatch

./: frp-stopwatch.cabal  stack.yaml
app/: StopwatchFRP.hs  StopwatchIO.hs
