name:                frp-stopwatch
version:             0.1.0.0
synopsis:            A FRP example
description:         Please see README.md
homepage:            http://github.com/mitsuji/frp-stopwatch
license:             BSD3
license-file:        LICENSE
author:              Takamasa Mitsuji
maintainer:          tkms@mitsuji.org
--copyright:           2010 Author Here
category:            FRP
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable stopwatch-io-exe
  hs-source-dirs:      app
  main-is:             StopwatchIO.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , frp-stopwatch
                     , timers
                     , suspend
                     , time
  default-language:    Haskell2010

executable stopwatch-frp-exe
  hs-source-dirs:      app
  main-is:             StopwatchFRP.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , frp-stopwatch
                     , timers
                     , suspend
                     , time
                     , reactive-banana
  default-language:    Haskell2010

--test-suite frp-stopwatch-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , frp-stopwatch
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitsuji/frp-stopwatch
